# Rust_Fav_Fold

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
src/: cli_args.rs  clipboard.rs  command_handling.rs  constants.rs  data_access.rs  favorite_folder_record.rs  file_access.rs  file_data.rs  lib.rs  linux_clipboard.rs  logging.rs  main.rs  paths.rs  prelude.rs  trimmed_not_empty_text.rs
src/all_favorites/: longer_test_input.json  mod.rs  test_input.json
src/all_favorites/snapshots/: folder_favorite__all_favorites__testing__add_non_existing_name.snap  folder_favorite__all_favorites__testing__filter_for_containing_names.snap  folder_favorite__all_favorites__testing__name_found_rename_it.snap  folder_favorite__all_favorites__testing__name_found_then_remove_it.snap  folder_favorite__all_favorites__testing__name_not_found_dont_remove_it.snap  folder_favorite__all_favorites__testing__no_name_found_dont_rename.snap  folder_favorite__all_favorites__testing__set_exisiting_favorite.snap
src/app/: console_interaction.rs  mod.rs  term_colors.rs
src/favorite_table/: draw_params.rs  mod.rs
src/favorite_table/snapshots/: folder_favorite__favorite_table__testing__list_all_every_favorite.snap  folder_favorite__favorite_table__testing__list_all_with_prompt_every_favorite.snap
