[package]
name = "folder_favorite"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = {version = "4.0.32", features= ["derive"]} 
directories = "4.0.1"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
