[package]
name = "folder_favorite"
version = "1.4.3"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
arboard = "3.4.0"
clap = {version = "4.5.16", features= ["derive"]} 
dirs = "5.0.1"
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
# Used to expand paths with tilde to their absolute version. 
# The expansion is done in the subcommand get where the check of existence is buggy with tilde. 
shellexpand = "3.1.0"

log = "0.4.22"
env_logger = "0.11.5"
derive_more = { version = "1.0.0", default-features = false, features = ["as_ref", "deref", "from", "into", "display"] }
thiserror = "1.0.63"

[dev-dependencies]
insta = "1.39.0"

